# anne

./: .gitignore  Cargo.toml  ChangeLog.md  README.md  TODO.md  anne.cabal  package.yaml
.stack-work/install/x86_64-linux-tinfo6/lts-12.10/8.4.3/lib/x86_64-linux-ghc-8.4.3/anne-0.1.0.0-8hRn8AIVHf6CeEqwoXbHlS/: Lib.dyn_hi  Lib.hi  Paths_anne.dyn_hi  Paths_anne.hi
.stack-work/install/x86_64-linux-tinfo6/lts-12.10/8.4.3/pkgdb/: anne-0.1.0.0-8hRn8AIVHf6CeEqwoXbHlS.conf  package.cache
src/: book.rs  commands.rs  filetypes.rs  formatting.rs  library.rs  main.rs  term_print.rs
test/data/: moby-dick.epub
