[package]
name = "alexandria"
version = "0.1.0"
authors = ["zovt <zovt@posteo.de>"]
description = "A simple program to manage eBook files"
license-file = "LICENSE"
homepage = "https://github.com/zovt/alexandria"
repository = "https://github.com/zovt/alexandria"

[[bin]]
name = "dria"
path = "src/main.rs"

[dependencies]
log = "0.4.0"
env_logger = "0.4.3"
