[package]
name = "shelf"
version = "0.1.0"
authors = ["zovt <zovt@posteo.de>"]
description = "A simple program to manage eBook files"
license-file = "LICENSE"
homepage = "https://github.com/zovt/shelf"
repository = "https://github.com/zovt/shelf"

[[bin]]
name = "shelf"
path = "src/main.rs"

[dependencies]
log = "0.4.0"
env_logger = "0.4.3"
zip = "0.2.6"
quick-xml = "0.10.1"
