[package]
name = "anne"
version = "0.1.0"
authors = ["zovt <zovt@posteo.de>"]
description = "Anne (the Librarian) is a tool to manage your eBook collection"
license-file = "LICENSE"
homepage = "https://github.com/zovt/anne"
repository = "https://github.com/zovt/anne"

[[bin]]
name = "anne"
path = "src/main.rs"

[dependencies]
log = "0.4.0"
env_logger = "0.4.3"
zip = "0.2.6"
quick-xml = "0.10.1"
clap = "2.29.0"
